Adicionadas coisas novas: - Activity do jodo - Activity do score - Banner de publicidade no fundo da pagina do score

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,9 @@
     <!-- Main Menu -->
     <string name="app_name">MemoryGame</string>
     <string name="title_m">Memory Match</string>
-    <string name="startBtn">START</string>
-    <string name="scoreBtn">SCORE</string>
+    <string name="startBtn_m">START</string>
+    <string name="scoreBtn_m">SCORE</string>
+    <string name="scoreTitle_s">Scoreboard</string>
 
 
 </resources>
