About page added and more things

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="title_m">Memory Match</string>
     <string name="startBtn_m">START</string>
     <string name="scoreBtn_m">SCORE</string>
+    <string name="aboutBtn_m">ABOUT</string>
     <string name="scoreTitle_s">Scoreboard</string>
 
 
