--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="game_theme_u">Game Theme</string>
     <string name="radioBtn1_u">Car Brands</string>
     <string name="radioBtn2_u">Social Networks</string>
-    <string name="radioBtn3_u">Electronic Symbols</string>
+    <string name="radioBtn3_u">Game characters</string>
     <string name="radioButtonEasy">easy</string>
     <string name="radioButtonMedium">medium</string>
     <string name="radioButtonHard">hard</string>
